--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,10 @@ on:
   pull_request:
     types: [opened]
   workflow_dispatch:
+  workflow_call:
 
 jobs:
-  test:
+  ci:
     runs-on: ubuntu-20.04
     timeout-minutes: 10
     steps:
