--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,3 +18,5 @@ jobs:
           deno-version: "1.39.4"
       - name: Format Check
         run: deno fmt --check
+      - name: Test
+        run: deno run test
