--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "tasks": {
-    "compile": "deno compile --allow-read --allow-env --allow-net deepl.ts"
+    "compile": "deno compile --allow-read --allow-env --allow-net deepl.ts",
+    "test": "deno test --allow-read --allow-env --allow-net"
   },
   "lock": true
 }
