--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Format Check
         run: deno fmt --check
       - name: Test
-        run: deno run test
+        run: deno task test
