--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,8 +17,10 @@ jobs:
           deno-version: "1.39.4"
       - name: Compile
         run: deno task compile
+      - name: Compress
+        run: tar czvf deepl.tar.gz ./deepl
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
           name: deepl
-          path: /home/runner/work/deepl-cli/deepl-cli/deepl
+          path: ./deepl.tar.gz
