--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,6 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
-          name: deepl
-          path: ../
+          name: deepl-cli
+          path: /home/runner/work/deepl-cli/deepl-cli
           compression-level: 0
