--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "compile": "deno compile --allow-read --allow-env --allow-net deepl.ts",
+    "compile": "deno compile --output deepl --target aarch64-apple-darwin --allow-read --allow-env --allow-net deepl.ts --lite",
     "test": "deno test --allow-read --allow-env --allow-net"
   },
   "lock": true
