--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,9 +17,11 @@ jobs:
           deno-version: "1.39.4"
       - name: Compile
         run: deno task compile
+      - name: Compress
+        run: tar -czf deepl.tar.gz deepl
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
-          name: deepl-linux
-          path: ./deepl
+          name: deepl-aarch64-apple-darwin
+          path: ./deepl.tar.gz
           compression-level: 0
