--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,6 @@
 {
   "tasks": {
+    "run": "deno run --allow-read --allow-env --allow-net main.ts",
     "compile": "deno compile --output deepl --target aarch64-apple-darwin --allow-read --allow-env --allow-net main.ts --lite",
     "test": "deno test --allow-read --allow-env --allow-net"
   },
