--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,27 +1,51 @@
 name: Release
 on:
-  release:
-    types: [created]
   workflow_dispatch:
+    inputs:
+      version:
+        type: string
+        description: Version to release (e.g. 1.0.0)
+        required: true
+
+env:
+  TZ: "Asia/Tokyo"
+
 jobs:
-  ci:
-    uses: ./.github/workflows/ci.yml
-  compile:
+  validate:
     runs-on: ubuntu-20.04
-    needs: [ci]
-    timeout-minutes: 10
+    env:
+      RELEASE_VERSION: ${{ github.event.inputs.version }}
+      if: github.ref_name == 'main'
     steps:
-      - uses: actions/checkout@v4
-      - uses: denoland/setup-deno@v1
-        with:
-          deno-version: "1.39.4"
-      - name: Compile
-        run: deno task compile
-      - name: Compress
-        run: tar -czf deepl.tar.gz deepl
-      - name: Upload
-        uses: actions/upload-artifact@v4
-        with:
-          name: deepl-aarch64-apple-darwin
-          path: ./deepl.tar.gz
-          compression-level: 0
+      - name: Validate Release Version
+        run: |
+          if [[ ! ${{ github.event.inputs.version }} =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "Invalid version format. (e.g. 1.0.0)"
+            exit 1
+          fi
+
+  ci:
+    needs: [validate]
+    if: github.ref_name == 'main'
+    uses: ./.github/workflows/ci.yml
+
+  release:
+    runs-on: ubuntu-20.04
+    timeout-minutes: 10
+    needs: [ci]
+    env:
+      RELEASE_VERSION: ${{ github.event.inputs.version }}
+    if: github.ref_name == 'main'
+    steps:
+      - name: Validate Release Version
+        run: |
+          if [[ ! ${{ env.RELEASE_VERSION }} =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "Invalid version format. (e.g. 1.0.0)"
+            exit 1
+          fi
+      - name: Setup Release Tag Name
+        run: echo "RELEASE_TAG=v$RELEASE_VERSION" >> $GITHUB_ENV
+      - name: Create Release Note
+        run: gh release create $RELEASE_TAG --target ${{ github.ref_name }} --generate-notes
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
