--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,7 @@ jobs:
       RELEASE_VERSION: ${{ github.event.inputs.version }}
     if: github.ref_name == 'main'
     steps:
+      - uses: actions/checkout@v4
       - name: Validate Release Version
         run: |
           if [[ ! ${{ env.RELEASE_VERSION }} =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
