--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,8 +1,12 @@
 name: Compile
 on:
-  release:
-    types: [created]
   workflow_dispatch:
+    inputs:
+      version:
+        type: string
+        description: Version to release (e.g. 1.0.0)
+        required: true
+  workflow_call:
     inputs:
       version:
         type: string
@@ -17,7 +21,7 @@ jobs:
     runs-on: ubuntu-20.04
     timeout-minutes: 10
     env:
-      RELEASE_VERSION: ${{ github.event.release.tag_name || github.event.inputs.version }}
+      RELEASE_VERSION: ${{ github.event.inputs.version }}
     permissions:
       contents: write
     steps:
