--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,3 +52,10 @@ jobs:
         run: gh release create $RELEASE_TAG --target ${{ github.ref_name }} --generate-notes
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  compile:
+    needs: [release]
+    if: github.ref_name == 'main'
+    uses: ./.github/workflows/compile.yml
+    with:
+      version: ${{ github.event.inputs.version }}
